# Alusus

./: .gitignore  .travis.yaml  .travis.yml  AlususConfig.cmake  changelog.ar.md  changelog.ar.txt  changelog.en.md  changelog.en.txt  deb-changelog.en.txt  license.txt  readme.ar.md  readme.ar.txt  readme.en.txt  readme.md  rpm-changelog.en.txt  test.alusus  version
Sources/: CMakeLists.txt  doxygen.conf  precompiled_headers.cmake
Sources/Brl/: Array.alusus  Array.h  ArrayIndex.alusus  ArrayIndex.h  CMakeLists.txt  Console.alusus  Map.alusus  Map.h  Memory.alusus  Refs.alusus  Refs.h  String.alusus  StringBase.alusus  System.alusus  WString.alusus  brl.alusus  brl.cpp  brl.h  exceptions.cpp  exceptions.h  refs.alusus  refs.h  strs.h  تـطبيق.أسس  ذاكـرة.أسس  سـندات.أسس  سندات.أسس  طـرفية.أسس  فـهرس_مصفوفة.أسس  قـالب_نص.أسس  متا.أسس  مـصفوفة.أسس  نـص.أسس  نـص_عريض.أسس  نـظام.أسس
Sources/Core/: CMakeLists.txt  core.h  core_fwd.h  core_global_storage.cpp  core_global_storage.h  interop.cpp  main.cpp  start.cpp
Sources/Core/Basic/: Argument.h  Binding.h  BindingIndexCache.h  BindingMap.cpp  BindingMap.h  Bindings.h  Box.h  Container.h  ContainerExtender.h  Containing.h  DynamicBinding.h  DynamicBindings.h  DynamicContaining.h  DynamicInterfaces.h  DynamicInterfacing.h  DynamicMapContaining.h  DynamicRtBinding.h  DynamicRtMembers.h  ExMapContaining.h  Finally.h  GlobalStorage.cpp  GlobalStorage.h  IdentifiableInterface.cpp  IdentifiableInterface.h  IdentifiableObject.cpp  IdentifiableObject.h  ListContainer.h  ListContaining.h  Logger.cpp  Logger.h  MapContainer.h  MapContaining.h  ObjTiInterface.h  ObjTiInterfaceList.h  PlainArrayWrapperContainer.h  PlainList.h  PlainListBase.h  PlainMap.h  PlainMapBase.h  RtBinding.h  (+57 more)
Sources/Core/Common/: BuildMsg.cpp  BuildMsg.h  CustomBuildMsg.h  Token.h  UnrecognizedErrorMsg.h  common.h
Sources/Core/Data/: AlternateTerm.h  AttributesHolder.h  BuildHandler.h  CacheHaving.h  CharGroupDefinition.h  CharGroupTerm.h  CharGroupUnit.h  Clonable.h  ConcatTerm.h  ConstTerm.h  Container.h  CustomNotice.h  DataContext.cpp  DataContext.h  DataHaving.h  DataOwner.h  DataStack.cpp  DataStack.h  DataStore.cpp  DataStore.h  GrammarContext.cpp  GrammarContext.h  GrammarHelper.cpp  GrammarHelper.h  GrammarModule.cpp  GrammarModule.h  GrammarPlant.cpp  GrammarPlant.h  GrammarRepository.cpp  GrammarRepository.h  IdGenerator.cpp  IdGenerator.h  IdHaving.h  IdHolder.h  IdOwner.h  IndexReference.cpp  IndexReference.h  IndirectReference.cpp  IndirectReference.h  IndirectReferenceSegment.cpp  (+123 more)
Sources/Core/Lexer/: AlternativeTerm.cpp  AlternativeTerm.h  BufferFullMsg.h  CharGroupDefinition.h  CharGroupDefinitionList.cpp  CharGroupDefinitionList.h  CharGroupTerm.h  CharGroupUnit.h  ConcatTerm.cpp  ConcatTerm.h  ConstTerm.h  DuplicateTerm.h  InputBuffer.cpp  InputBuffer.h  InvertCharGroupUnit.h  ListTerm.cpp  ListTerm.h  OptionalTerm.h  RandomCharGroupUnit.h  ReferenceTerm.h  SequenceCharGroupUnit.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  Term.h  TokenClampedMsg.h  TokenDefinition.h  TokenDefinitionList.cpp  TokenDefinitionList.h  UnionCharGroupUnit.cpp  UnionCharGroupUnit.h  UnrecognizedCharMsg.cpp  UnrecognizedCharMsg.h  lexer.h
Sources/Core/Main/: LibraryGateway.h  LibraryManager.cpp  LibraryManager.h  Processor.cpp  Processor.h  RootManager.cpp  RootManager.h  RootScopeHandler.cpp  RootScopeHandler.h  main.cpp  main.h
Sources/Core/Notices/: CustomNotice.h  GenericNotice.h  ImportLoadFailedNotice.h  L18nDictionary.cpp  L18nDictionary.h  Notice.h  RedefinitionNotice.h  Store.cpp  Store.h  UnrecognizedCharNotice.cpp  UnrecognizedCharNotice.h  notices.cpp  notices.h
Sources/Core/Parser/: AmbiguityMsg.h  ExtendedState.cpp  ExtendedState.h  ParsingHandler.h  ProdLevel.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  SyntaxErrorMsg.h  TermLevel.h  UnexpectedEofMsg.h  UnexpectedTokenMsg.h  parser.h
Sources/Core/Processing/: AmbiguityMsg.h  BufferFullMsg.h  BuildMsg.cpp  BuildMsg.h  BuildMsgStore.cpp  BuildMsgStore.h  CharInStreaming.h  ConstTokenizingHandler.h  CustomBuildMsg.h  DecisionNodePool.cpp  DecisionNodePool.h  Engine.cpp  Engine.h  GenericParsingHandler.cpp  GenericParsingHandler.h  InputBuffer.cpp  InputBuffer.h  InteractiveCharInStream.cpp  InteractiveCharInStream.h  Lexer.cpp  Lexer.h  LexerState.cpp  LexerState.h  NoticeStore.cpp  NoticeStore.h  Parser.cpp  Parser.h  ParserModifierLevel.h  ParserProdLevel.h  ParserState.cpp  ParserState.h  ParserTermLevel.h  ParsingHandler.h  RootParsingHandler.cpp  RootParsingHandler.h  StdCharInStream.cpp  StdCharInStream.h  SyntaxErrorMsg.h  (+11 more)
Sources/Scg/: AstNode.cpp  AstNode.h  CMakeLists.txt  CodeGenUnit.cpp  CodeGenUnit.h  Expression.cpp  Expression.h  LibraryGateway.cpp  LibraryGateway.h  LlvmContainer.cpp  LlvmContainer.h  Logger.cpp  Logger.h  exceptions.h  llvm_fwd.h  macros.h  main.cpp  precompiled_headers.cpp  precompiled_headers.h  prerequisites.h  scg.h  typedefs.h
Sources/Spp/: BuildManager.cpp  BuildManager.h  BuildSession.h  Building.h  CMakeLists.txt  DependencyInfo.h  DependencyList.h  Executing.h  ExecutionContext.h  ExpressionComputation.h  GlobalCtorDtorInfo.h  GrammarFactory.cpp  GrammarFactory.h  LibraryGateway.cpp  LibraryGateway.h  NodePathResolver.cpp  NodePathResolver.h  RootManagerExtension.cpp  RootManagerExtension.h  RootScopeHandlerExtension.cpp  RootScopeHandlerExtension.h  SeekerExtension.cpp  SeekerExtension.h  linker_version_script.map  macos_exported_symbols.txt  main.cpp  spp.h
Sources/Srt/: Apm.alusus  Build.alusus  CMakeLists.txt  Core.alusus  Gtk.alusus  Spp.alusus  Zip.alusus  apm  apm.translate.alusus  closure.alusus  common.alusus  globals.alusus  gtk.alusus  srt.alusus  الـقلب.أسس  بـناء.أسس  جـتك.أسس  ضـغط.أسس  عامة.أسس  متم.أسس  محا  مغلفة.أسس  مـحا.أسس  نـبم.أسس
Sources/Tests/: CMakeLists.txt  cpp_interop_test.cpp  main.cpp
Sources/Win32API/: CMakeLists.txt  win32api.c  win32api.cpp  win32api.h
Sources/Win32Helpers/: CMakeLists.txt  Win32Helpers.cpp  Win32Helpers.h
Sources/dlfcn-win32/: CMakeLists.txt  dlfcn.c  dlfcn.h
(+1949 files in other folders)
